<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.user.mystudio.SignUp"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@drawable/borobudur_edited">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Account Name"
        android:textColor="#ffffff"
        android:hint="Your real name"
        android:layout_marginStart="13dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintLeft_toRightOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="#ffffff"
        android:layout_marginStart="11dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_username"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="#ffffff"
        android:layout_marginStart="11dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/signup_password"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="6dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Re-Type Password"
        android:textColor="#ffffff"
        android:layout_marginStart="11dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="-7dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView7"
        android:layout_marginLeft="11dp" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="275dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="29dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="275dp"
        android:layout_height="38dp"
        android:ems="10"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:inputType="textEmailAddress"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="275dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/signup_repassword"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="81dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="81dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_email" />

    <EditText
        android:id="@+id/signup_repassword"
        android:layout_width="275dp"
        android:layout_height="38dp"
        android:layout_marginBottom="81dp"
        android:layout_marginEnd="54dp"
        android:layout_marginLeft="0dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/signup_submit"
        app:layout_constraintLeft_toLeftOf="@+id/signup_password"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/signup_password"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_editor_absoluteY="363dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="23dp"
        android:layout_height="28dp"
        app:srcCompat="@drawable/iconuser"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        android:layout_marginTop="59dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="60dp"
        app:layout_constraintLeft_toLeftOf="@+id/signup_username" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/email"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="64dp"
        app:layout_constraintLeft_toLeftOf="@+id/signup_username" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="15dp"
        android:layout_height="17dp"
        app:srcCompat="@drawable/key"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/signup_repassword"
        app:layout_constraintRight_toRightOf="@+id/imageView6"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toLeftOf="@+id/signup_password"
        android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="15dp"
        android:layout_height="17dp"
        app:srcCompat="@drawable/key"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/signup_email" />

    <Button
        android:id="@+id/signup_submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/roundtxtbar"
        android:text="Submit"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_repassword" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"


        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="Signup"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintLeft_toLeftOf="@+id/toolbar2"
        app:layout_constraintRight_toRightOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
